<resources>
    <string name="app_name">HamurTamu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_cari_judul">Cari Kost/Kontrakan</string>
    <string name="text_kost">Kost</string>
    <string name="text_kontrakan">Kontrakan</string>
    <string name="text_gender">Jenis Kelamin</string>
    <string name="text_daerah">Daerah</string>
    <string name="text_harga">Harga</string>
    <string name="text_fasilitas">Fasilitas</string>
    <string name="text_KM">Kamar mandi dalam</string>
    <string name="text_garasi">Garasi</string>
    <string name="text_perabot">Perabot(Kasur, Almari, dll)</string>
    <string name="text_AC">AC</string>
    <string name="login_text">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="textNama">Nama</string>
    <string name="textTlp">Nomor Telepon</string>
    <string name="textEmail">Email</string>
    <string name="register_text">Daftar Akun Baru</string>
    <string name="search_text">Pencarian</string>
    <string name="text_no_account">Belum punya akun? Daftar disini</string>
    <string name="telusuri">Telusuri Kost/Kontrakan lainnya</string>

    <string name="text_cari">Cari</string>
    <string name="text_batal">Batal</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_daftar">Daftar</string>

    <string name="text_oldPassword">Password Lama</string>
    <string name="text_newPassword">Password Baru</string>

    <string name="auth_failed">Gagal menyambung, coba beberapa saat lagi</string>

    <string-array name="gender_list">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="daerah_list">
        <item>Lowokwaru</item>
        <item>Dll</item>
        <item>Dll</item>
    </string-array>

    <string-array name="price_list">
        <item>200000</item>
        <item>500000</item>
        <item>1000000</item>
        <item>1500000</item>
        <item>2000000</item>
    </string-array>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

</resources>
