<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/fragment_layout_padding"
    tools:context="com.example.mat.hamurtamu.Register_fragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/register_text"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layoutLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="@dimen/text_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNama"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/EditTextNama"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/username"
                style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confirmpassword"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/password_register_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTlp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/EditTextTlp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPhonetic"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textEmail"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/fragment_layout_padding"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutLogin">

            <Button
                android:id="@+id/buttonBatal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/text_batal"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/buttonDaftar" />

            <Button
                android:id="@+id/buttonDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/text_daftar"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/buttonBatal"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
